Apply the search results bg fix in dark mode too

--- a/packages/web/docs/src/search-results-contrast-fix.css
+++ b/packages/web/docs/src/search-results-contrast-fix.css
@@ -4,7 +4,8 @@
   );
 }
 
-html[class~='light'] .nextra-search-results {
+.light .nextra-search-results {
+  @apply !border-green-200;
   background-color: white;
   padding: 1rem 0;
 }
